--- a/package.json
+++ b/package.json
@@ -5,18 +5,43 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "server": "tsx --watch server/index.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
+    "@neondatabase/serverless": "^1.0.2",
+    "@types/nodemailer": "^7.0.10",
+    "@types/pdfkit": "^0.17.5",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^12.6.2",
+    "cors": "^2.8.6",
+    "discord.js": "^14.25.1",
+    "dotenv": "^17.3.1",
+    "drizzle-orm": "^0.45.1",
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "firebase": "^12.9.0",
+    "groq-sdk": "^0.37.0",
+    "helmet": "^8.1.0",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.1",
+    "pdfkit": "^0.17.2",
+    "postgres": "^3.4.8",
     "react": "^19.2.4",
-    "recharts": "^3.7.0",
     "react-dom": "^19.2.4",
-    "@google/genai": "^1.41.0"
+    "recharts": "^3.7.0",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "drizzle-kit": "^0.31.9",
+    "tsx": "^4.21.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
